--- a/public/styles.css
+++ b/public/styles.css
@@ -9,8 +9,15 @@ body {
 	background-color:rgb(50,50,50);
 }
 
+div.main-content.wrapper {
+	display: grid;
+	height: 100vh;
+	grid-template-columns: 1fr 15fr;
+	grid-template-rows: 1fr;
+}
+
 form { 
-	background: #000; 
+	background: rgb(0,0,0); 
 	padding: 3px; 
 	position: fixed; 
 	bottom: 0; 
@@ -19,6 +26,7 @@ form {
 
 form input { 
 	border: 0; 
+	border-radius: 12px;
 	padding: 10px; 
 	width: 90%; 
 	margin-right: .5%; 
@@ -32,19 +40,31 @@ form button {
 	padding: 10px; 
 }
 
+div.wrapper.messages{
+	border-left: 2px solid rgb(100,100,100);
+	border-style: solid;
+	height: 100%;
+}
+
 #messages { 
-	list-style-type: 
-	none; 
+	list-style-type: none; 
 	margin: 0; 
-	padding: 0; 
+	padding: 0;
 }
 
 #messages li { 
-	padding: 5px 10px; 
+	padding: 2px 10px; 
 	color: rgb(255,192,203);
-
 }
 
 #messages li:nth-child(odd) { 
 	background: rgb(128,128,128)
+}
+
+#messages li:nth-child(even) {
+	background: rgb(64, 64, 64);
+}
+
+div.users li {
+	color: rgb(20,100,10);
 }
